--- a/rc/index.html
+++ b/rc/index.html
@@ -1,17 +1,13 @@
 <!DOCTYPE html>
-<!-- saved from url=(0020)https://example.com/ -->
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Vortex Button Example</title>
     <link rel="icon" href="data:;base64,=" />
-
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CEF Two-Way Binding Example</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100vh;
@@ -28,6 +24,7 @@
             border-radius: 4px;
             cursor: pointer;
             transition: background-color 0.3s;
+            margin-bottom: 20px;
         }
 
             button:hover {
@@ -37,24 +34,80 @@
             button:active {
                 background-color: #3e8e41;
             }
+
+        input {
+            padding: 10px;
+            font-size: 16px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            width: 300px;
+            margin-bottom: 10px;
+        }
+
+        .container {
+            background-color: white;
+            padding: 30px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+            text-align: center;
+        }
     </style>
 </head>
-
 <body>
-    <button id="myButton">Click Me!</button>
+    <div class="container">
+        <h2>Two-Way Binding Example</h2>
+
+        <button id="myButton">Loading...</button>
+
+        <p>Edit button text:</p>
+        <input type="text" id="textInput" placeholder="Enter new button text">
+        <button id="updateButton">Update Button Text</button>
+    </div>
 
     <script>
-        // Get the button element
+        // Elements
         const button = document.getElementById('myButton');
+        const textInput = document.getElementById('textInput');
+        const updateButton = document.getElementById('updateButton');
 
-        // Add click event listener
+        // Initialize with current value from C++
+        function initializeUI() {
+            const initialText = getButtonText();
+            button.textContent = initialText;
+            textInput.value = initialText;
+
+            // Register for property changes from C++
+            registerButtonTextCallback(function (newText) {
+                console.log("Property changed in C++:", newText);
+                button.textContent = newText;
+                textInput.value = newText;
+            });
+        }
+
+        // Button click handler
         button.addEventListener('click', function () {
-            // Call the C++ function
-            const newText = vortexCall("myButton");
-
-            // Update the button text
-            button.textContent = newText;
+            // Toggle between two states
+            if (button.textContent === "Hello From C++!") {
+                setButtonText("Click Me Again!");
+            } else {
+                setButtonText("Hello From C++!");
+            }
         });
+
+        // Update button handler
+        updateButton.addEventListener('click', function () {
+            const newText = textInput.value;
+            setButtonText(newText);
+        });
+
+        // Input change handler for real-time updates
+        textInput.addEventListener('input', function () {
+            const newText = textInput.value;
+            setButtonText(newText);
+        });
+
+        // Initialize the UI when the page loads
+        document.addEventListener('DOMContentLoaded', initializeUI);
     </script>
 </body>
 </html>
