Enhance serialization, and improve UI handling
- Added JSON serialization code generation in generator.cpp.
- Made the initializeUI function asynchronous in index.html.
- Improved memory handling for command-line arguments in entry_main.cpp.
- Introduced new methods in app.h for node type and property management.
- Removed GreetAsync method in favor of more relevant functionality.
- Updated NodeImpl structure in interfaces.h for better type safety.
- Enhanced NodeFactory to store static node information in node_factory.h.
- Added a method in model.h to retrieve node properties.
- Refactored serialization methods in props.hpp to use std::format.
- Introduced new traits for handling CefValue types in value.h.
- Added StaticNodeInfo struct in reflection.h for node information.
- Overall improvements to code structure, functionality, and UI integration.

--- a/rc/index.html
+++ b/rc/index.html
@@ -71,13 +71,19 @@
         const updateButton = document.getElementById('updateButton');
 
         // Initialize with current value from C++
-        function initializeUI() {
+        async function initializeUI() {
+            var nodes = await vortexCallAsync("GetNodeTypesAsync");
+            // nodes is a dictionary with string : json string pairs
+            // print the dictionary to console
+            console.log("Node Types:", JSON.stringify(nodes, null, 2));
         }
 
         // Add on button click
         button.addEventListener('click', async function () {
             // Toggle between two states
-            var a = await vortexCallAsync("GreetAsync");
+            var a = await vortexCallAsync("CreateNodeAsync", "ImageInput");
+            var b = await vortexCallAsync("GetNodePropertiesAsync", a);
+
             button.textContent = a;
         });
 
